--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "bun src/index.ts"
   },
   "dependencies": {
     "@grammyjs/i18n": "^1.1.2",
     "@origranot/ts-logger": "^1.12.0",
+    "deepl-node": "^1.17.3",
     "dotenv": "^16.4.7",
     "grammy": "^1.35.0",
     "instagram-private-api": "^1.46.1",
