--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/bun": "^1.2.15",
     "typescript": "^5.5.3"
   },
   "private": true
